# ipmi-desktop-manager

./: .gitignore  README.md  serve.js
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/permissions/: default.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/ipmi/: mod.rs  sol.rs
src-tauri/src/keychain/: mod.rs
src-tauri/src/redfish/: mod.rs
src/css/: app.css
src/js/: app.js
