[package]
name = "ipmi-desktop-manager"
version = "0.1.0"
edition = "2021"
description = "Native IPMI/BMC management application for Supermicro servers"
authors = ["IPMI Desktop Manager"]
license = "MIT"

[lib]
name = "ipmi_desktop_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
thiserror = "2"
log = "0.4"
env_logger = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
